syntax = "proto3";

package depot.cloud.v2;

import "google/protobuf/timestamp.proto";

service MachineService {
  rpc RegisterMachine(RegisterMachineRequest) returns (stream RegisterMachineResponse);
  rpc PingMachineHealth(stream PingMachineHealthRequest) returns (PingMachineHealthResponse);
}

message RegisterMachineRequest {
  string connection_id = 1;
  oneof cloud {
    AWSRegistration aws = 2;
  }

  message AWSRegistration {
    string document = 1;
    string signature = 2;
  }
}

message RegisterMachineResponse {
  string machine_id = 1;
  string token = 2;
  oneof task {
    PendingTask pending = 3;
    BuildKitTask buildkit = 4;
    GitHubActionsTask github_actions = 5;
  }

  message Mount {
    string path = 1;
    string device = 2;
  }

  // PendingTask represents an instruction to wait for a task to be assigned
  message PendingTask {}

  // BuildkitTask represents an instruction to start a buildkit daemon
  message BuildKitTask {
    string server_name = 1;
    Cert cert = 2;
    Cert ca_cert = 3;
    repeated Mount mounts = 4;
    int32 cache_size = 5;
    optional string trace_endpoint = 6;
  }

  // GithubActionsTask represents an instruction to start a GitHub Actions runner
  message GitHubActionsTask {
    string registration_token = 1;
    string name = 2;
    string url = 3;
    string labels = 4;
    string runner_version = 5;
  }
}

message PingMachineHealthRequest {
  string machine_id = 1;
}

message PingMachineHealthResponse {
  bool should_terminate = 1;
}

message Cert {
  string cert = 1;
  string key = 2;
}
